--- a/wiki/pameryjskie_tablice_rejestracyjne/index.html
+++ b/wiki/pameryjskie_tablice_rejestracyjne/index.html
@@ -36,7 +36,7 @@
 
 <figure class="right"><img src="https://i.ibb.co/MPXfDxY/pamercja-kody.png" alt="Oznaczenia tablic rejestracyjnych według województw"><figcaption>Oznaczenia tablic rejestracyjnych według województw</figcaption></figure>
 
-<figure class="right"><img src="https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png" alt="Oznaczenia tablic rejestracyjnych według powiatów"><figcaption>Oznaczenia tablic rejestracyjnych według powiatów</figcaption></figure>
+<figure class="right"><img src="https://i.ibb.co/GTTkcL7/powiaty-kody-gotowe.png" alt="Oznaczenia tablic rejestracyjnych według powiatów"><figcaption>Oznaczenia tablic rejestracyjnych według powiatów</figcaption></figure>
 
 <h1>Opis systemu tablic rejestracyjnych w Pamercji </h1>
 <p>Wyróżnia się pięć rodzajów tablic rejestracyjnych:</p>
@@ -162,7 +162,7 @@
 <p><b>Tablice tymczasowe</b> mają białe tło i czerwone znaki i są wydawane dla pojazdów rejestrowanych czasowo. Do września 2002 r. były obowiązkowe przy zmianie właściciela pojazdu. Obecnie wydaje się je tylko na wniosek właściciela. Układ znaków może być dwojaki:</p>
 
 <ul><li>I zasób – 1 litera + 1 cyfra + 4 cyfry (od 0001 do 9999)</li>
-<li>II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera; jeżeli litera B – tablice badawcze, w tym przypadku litera jest oddzielona spacją)</li></ul>
+<li>II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera</li></ul>
 <p>W przypadku tablic samochodowych zmniejszonych stosuje się ten sam zestaw znaków, co na tablicach zwyczajnych.</p>
 
 <h2>Tablice indywidualne</h2>
@@ -304,7 +304,7 @@
 
 [[img:https://i.ibb.co/MPXfDxY/pamercja-kody.png|right|Oznaczenia tablic rejestracyjnych według województw]]
 
-[[img:https://i.ibb.co/zRsJZ4w/powiaty-kody-gotowe.png|right|Oznaczenia tablic rejestracyjnych według powiatów]]
+[[img:https://i.ibb.co/GTTkcL7/powiaty-kody-gotowe.png|right|Oznaczenia tablic rejestracyjnych według powiatów]]
 
 = Opis systemu tablic rejestracyjnych w Pamercji  =
 
@@ -447,7 +447,7 @@ Tak jak na tablicach samochodowych od I do VI zasobu oraz zasoby X i XI.
 '''Tablice tymczasowe''' mają białe tło i czerwone znaki i są wydawane dla pojazdów rejestrowanych czasowo. Do września 2002 r. były obowiązkowe przy zmianie właściciela pojazdu. Obecnie wydaje się je tylko na wniosek właściciela. Układ znaków może być dwojaki:
 
 * I zasób – 1 litera + 1 cyfra + 4 cyfry (od 0001 do 9999)
-* II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera; jeżeli litera B – tablice badawcze, w tym przypadku litera jest oddzielona spacją)
+* II zasób – 1 litera + 1 cyfra + 3 cyfry (od 001 do 999) + 1 litera
 
 W przypadku tablic samochodowych zmniejszonych stosuje się ten sam zestaw znaków, co na tablicach zwyczajnych.
 
