--- a/wiki/index.html
+++ b/wiki/index.html
@@ -56,6 +56,7 @@
                 <li><a href="https://grumqy.github.io/fangea/wiki/stany_zjednoczone/">Stany Zjednoczone</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/iznotia/">Iznotia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/lemburg/">Lemburg</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/liwonia/">Liwonia</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/taj-hoi/">Taj-Hoi</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/teran/">Teran</a></li>
             </ul> 
