--- a/wiki/index.html
+++ b/wiki/index.html
@@ -92,8 +92,9 @@
                 <h1>Budynki</h1>
             </ul>
             <ul class="article-category">
-                <h1>Tablice rejestracyjne</h1>
+                <h1>Brak Kategorii</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">Pameryjskie tablice rejestracyjne</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/hierarchia_dróg/">Hierarchia dróg</a></li>
             </ul>
         </div>
     </main>
