--- a/wiki/hierarchia_dróg/index.html
+++ b/wiki/hierarchia_dróg/index.html
@@ -39,7 +39,7 @@
 
 <p>Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne. Każde państwo ma swoją własną hierarchię dróg, chociaż w skali globalnej istnieje także system numeracji dróg, znany jako drogi międzynarodowe.</p>
 
-<p>Większość krajów przyjęła koncepcję autostrad (Autobahnen/Autostrade), które zazwyczaj są wzorowane na rozwiązaniach stosowanych w Liwonii oraz w Iznotii. Idea autostrad pierwotnie została rozwinięta w Liwonii, gdzie wszystkie autostrady są wolne od opłat. System ten zyskał szerokie uznanie i zastosowanie na całym świecie. Wszystkie główne trasy posiadają międzynarodowy numer drogi (F), który może być używany jako dodatkowe oznaczenie. W krajach takich jak Lemburg, Makronezja Północna oraz Taj-Hoi numery te nie występują.</p>
+<p>Większość krajów przyjęła koncepcję autostrad (Autobahnen/Autostrade), które zazwyczaj są wzorowane na rozwiązaniach stosowanych w Liwonii oraz w Iznotii. Idea autostrad pierwotnie została rozwinięta w Liwonii, gdzie wszystkie autostrady są wolne od opłat. System ten zyskał szerokie uznanie i zastosowanie na całym świecie. Wszystkie główne trasy posiadają międzynarodowy numer drogi (F), który może być używany jako dodatkowe oznaczenie. W krajach takich jak Lemburg, Makronezja Północna, Martylia, Hegiwaria, Beliwaria oraz Taj-Hoi numery te nie występują.</p>
 
 <p>W większości innych krajów stosowane są różnorodne metody klasyfikacji tras, które różnicują drogi krajowe, regionalne oraz międzyregionalne, a także inne lokalne trasy.</p>
 
@@ -58,7 +58,7 @@
 
 Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne. Każde państwo ma swoją własną hierarchię dróg, chociaż w skali globalnej istnieje także system numeracji dróg, znany jako drogi międzynarodowe.
 
-Większość krajów przyjęła koncepcję autostrad (Autobahnen/Autostrade), które zazwyczaj są wzorowane na rozwiązaniach stosowanych w Liwonii oraz w Iznotii. Idea autostrad pierwotnie została rozwinięta w Liwonii, gdzie wszystkie autostrady są wolne od opłat. System ten zyskał szerokie uznanie i zastosowanie na całym świecie. Wszystkie główne trasy posiadają międzynarodowy numer drogi (F), który może być używany jako dodatkowe oznaczenie. W krajach takich jak Lemburg, Makronezja Północna oraz Taj-Hoi numery te nie występują.
+Większość krajów przyjęła koncepcję autostrad (Autobahnen/Autostrade), które zazwyczaj są wzorowane na rozwiązaniach stosowanych w Liwonii oraz w Iznotii. Idea autostrad pierwotnie została rozwinięta w Liwonii, gdzie wszystkie autostrady są wolne od opłat. System ten zyskał szerokie uznanie i zastosowanie na całym świecie. Wszystkie główne trasy posiadają międzynarodowy numer drogi (F), który może być używany jako dodatkowe oznaczenie. W krajach takich jak Lemburg, Makronezja Północna, Martylia, Hegiwaria, Beliwaria oraz Taj-Hoi numery te nie występują.
 
 W większości innych krajów stosowane są różnorodne metody klasyfikacji tras, które różnicują drogi krajowe, regionalne oraz międzyregionalne, a także inne lokalne trasy.
 
