--- a/wiki/hierarchia_dróg/index.html
+++ b/wiki/hierarchia_dróg/index.html
@@ -3,9 +3,9 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Hierarchia dróg - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Hierarchia dróg">
-<meta name="twitter:title" content="Hierarchia dróg">
+<title>Tytuł Artykułu - Fangea i inne kontynenty</title>
+<meta property="og:title" content="Tytuł Artykułu">
+<meta name="twitter:title" content="Tytuł Artykułu">
 <meta name="description" content="Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Osobny Artykuł: Road hierarchy Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne.">
 <meta property="og:description" content="Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Osobny Artykuł: Road hierarchy Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne.">
 <meta name="twitter:description" content="Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Osobny Artykuł: Road hierarchy Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne.">
@@ -28,13 +28,13 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Hierarchia dróg</div><span>11.10.2024</span></header>
+<header><div>Tytuł Artykułu</div><span>11.10.2024</span></header>
 
 <figure class="right"><img src="https://i.ibb.co/WFxxLx6/obraz-2024-10-11-123221903.png" alt="Jedna z dróg stanowych (State route) w Port Wilhelm w stanie Blackwater (USF)"><figcaption>Jedna z dróg stanowych (State route) w Port Wilhelm w stanie Blackwater (USF)</figcaption></figure>
 
 <p><b>Hierarchia dróg</b> klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych.</p>
 
-<h1>System drogowy na Świecie</h1>
+<h1>System drogowy na świecie</h1>
 <p><img src="https://i.ibb.co/vh0tWkb/informacja.png" class="icon medium"> <i>Osobny Artykuł: <a href="https://en.wikipedia.org/wiki/Road_hierarchy">Road hierarchy</a></i></p>
 
 <p>Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne. Każde państwo ma swoją własną hierarchię dróg, chociaż w skali globalnej istnieje także system numeracji dróg, znany jako drogi międzynarodowe.</p>
@@ -52,7 +52,7 @@
 
 '''Hierarchia dróg''' klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych.
 
-= System drogowy na Świecie =
+= System drogowy na świecie =
 
 [[icon:https://i.ibb.co/vh0tWkb/informacja.png|medium]] ''Osobny Artykuł: (https://en.wikipedia.org/wiki/Road_hierarchy)[Road hierarchy]''
 
