--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 <div class="article-tile-description">Powstanie Ekwalijskie</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/port_złotice/">
+        <a href="https://grumqy.github.io/fangea/wiki/hierarchia_dróg/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Port Złotice (niem. Hafengoldberg; katuc. Gielberentt; łac. Portaurum; heb. זהב נמל; ros. Гавань Злотице) – gminne miasto wojewódzkie leżące w województwie Złotickim, w powiecie Złotickim. Leży jednocześnie nad rzeką Wodnicą i kanałem Katuckim. Jest znane z najmniejszego portu w kraju i swej zabudowy, popularnie zwanej kamienicami typu Złotickiego, można je też spotkać w Kterowie, Porcie Wielcec czy Rinie.</span></div>
-                    <img src="https://i.ibb.co/VNZHWQ0/image.png">
+                    <div class="article-tile-text"><span>Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne. Każde państwo ma swoją własną hierarchię dróg, chociaż w skali globalnej istnieje także system numeracji dróg, znany jako drogi międzynarodowe.</span></div>
+                    <img src="https://i.ibb.co/WFxxLx6/obraz-2024-10-11-123221903.png">
                 </div>
-                <div class="article-tile-description">Port Złotice</div>
+                <div class="article-tile-description">Hierarchia dróg</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/pameryjskie_tablice_rejestracyjne/">
