--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
         </a>
     </div>
     <div class="article-tile-row" style=" display: flex; flex-direction: row; margin: auto; max-width: 2800px; justify-content: center; margin-top: 1rem;">
-        <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
+        <a href="https://grumqy.github.io/fangea/wiki/liwonia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
+                    <div class="article-tile-text"><span>Liwonia - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
                     <img src="https://i.ibb.co/172NNM4/rnflaga.png">
                 </div>
-                <div class="article-tile-description">Nadmorze</div>
+                <div class="article-tile-description">Liwonia</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/shot_paste/">
@@ -175,14 +175,14 @@
                 <div class="article-tile-description">Mistrzostwa Fangei w Piłce Nożnej 2024</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/nadmorze/">
+        <a href="https://grumqy.github.io/fangea/wiki/liwonia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <div class="article-tile-text"><span>Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
+                    <div class="article-tile-text"><span>Liwonia - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.</span></div>
                     <img src="https://i.ibb.co/172NNM4/rnflaga.png">
                 </div>
-                <div class="article-tile-description">Nadmorze</div>
+                <div class="article-tile-description">Liwonia</div>
             </div>
         </a>
     </div>
@@ -217,14 +217,14 @@
                 <div class="article-tile-description">Greenpay</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/cartland/">
+        <a href="https://grumqy.github.io/fangea/wiki/taj-hoi/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/syMJDYS/obraz-2024-04-21-011526519.png">
-                    <div class="article-tile-text"><span>Cartland to firma zajmująca się sprzedażą detaliczną żywności z siedzibą w Wernie. Prowadzi 450 placówek i jest reprezentowana w siedmiu innych krajach oprócz Montecydji. Ten pełnozakresowy detalista spożywczy jest spółką niezależną. W okresie późnych lat dwutysięcznych Robert Korgen założył przedsiębiorstwo o nazwie „Carteunland Werno”, które w 2023 roku zostało przekształcone w „Cartland”. Spółka ta przekształciła się w dynamiczną hurtownię spożywczą obsługującą region Dzisiejszej Zarwii.</span></div>
+                    <img src="https://i.ibb.co/GH1ttWY/taj-hoi.png">
+                    <div class="article-tile-text"><span>Taj-Hoi, Cesarstwo Taj-Hoi (wiet. Tài-Hội, Đế quốc Tài-Hội).</span></div>
                 </div>
-                <div class="article-tile-description">Cartland</div>
+                <div class="article-tile-description">Taj-Hoi</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
