--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
                 <div class="article-tile-description">Greenpay</div>
             </div>
         </a>
-        <a href="https://grumqy.github.io/fangea/wiki/taj-hoi/">
+        <a href="https://grumqy.github.io/fangea/wiki/martylia/">
             <div class="article-tile">
                 <div class="article-tile-hover-note"><i class="fa-regular fa-lightbulb"></i>Przeczytaj w Wiki</div>
                 <div class="article-tile-image">
-                    <img src="https://i.ibb.co/GH1ttWY/taj-hoi.png">
-                    <div class="article-tile-text"><span>Taj-Hoi, Cesarstwo Taj-Hoi (wiet. Tài-Hội, Đế quốc Tài-Hội).</span></div>
+                    <img src="https://i.ibb.co/MgmcZPs/martylia.png">
+                    <div class="article-tile-text"><span>Martylia, Republika Martylii (malt. Martilja, Repubblika tal-Martilja).</span></div>
                 </div>
-                <div class="article-tile-description">Taj-Hoi</div>
+                <div class="article-tile-description">Martylia</div>
             </div>
         </a>
         <a href="https://grumqy.github.io/fangea/wiki/montecydia/">
