--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="info-tile full" style="min-height: 350px; height: fit-content;">
                 <h1>O nas</h1>
                 <p>
-                    Fangea to miejsce, w którym członkowie naszej społeczności mogą brać czynny udział w Roleplay'u związanym z prowadzeniem oraz zarządzaniem swojego państwa położonego w fikcyjnym uniwersum Fangei bądź obserwować całą zabawę z góry jako obserwator. Zapewniamy wysoki poziom Roleplay'u oraz profesjonalne podejście do zabawy poprzez uwzględnienie wielu innowacyjnych funkcji takich jak m.in. szczegółowa mapa świata, kalkulator kursów walutowych, a nawet własna wikipedia poświęcona uniwersum.
+                    Fangea to miejsce, w którym członkowie naszej społeczności mogą brać czynny udział w Roleplay'u związanym z prowadzeniem oraz zarządzaniem swojego państwa położonego w fikcyjnym uniwersum Fangei bądź obserwować całą zabawę z góry jako obserwator. Zapewniamy wysoki poziom Roleplay'u oraz profesjonalne podejście do zabawy poprzez uwzględnienie wielu innowacyjnych funkcji takich jak m.in. szczegółowa mapa świata, kalkulator kursów walutowych, a nawet własna encyklopedia poświęcona uniwersum.
                 </p>
                 <div class="shadow" style="width: 120%; height: 500px; left: calc(50% - 700px); bottom: -400px;"></div>
             </div>
