--- a/wiki/iznotia/index.html
+++ b/wiki/iznotia/index.html
@@ -29,6 +29,7 @@
 </nav>
 <article>
 <header><div>Iznotia</div><span>11.10.2024</span></header>
+<div class="uncomplete"></div>
 <table class="infobox"><caption>Iznotiańska Republika Demokratyczna</caption><tbody><tr><th style="text-align: center;" colspan="2"> <i>Isnotische Demokratische Republik</i></th></tr><tr><td colspan="2"><table class="ibox"><tbody><tr><td><img src="https://i.ibb.co/7JpBJm1/iznotia.png" data-description="Flaga Iznotii"></td><td><img src="https://i.ibb.co/SmK1RfG/godlo-iznotii.png" data-description="Godło Iznotii"> </td></tr><tr><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/flaga_iznotii/">Flaga</a></td><td style="text-align: center;"> <a href="https://grumqy.github.io/fangea/wiki/godło_iznotii/">Godło</a> </td></tr></tbody></table></td></tr><tr><td style="text-align: center;" colspan="2"> Hymn: <a href="https://grumqy.github.io/fangea/wiki/hymn_iznotii/"><i>Auferstanden aus Ruinen</i></a><br>(<i>Powstając z ruin</i>) </td></tr><tr><td style="text-align: center;" colspan="2"> <audio controls=""><source src="https://audio.jukehost.co.uk/gu9sxp2gYIqKxJ4ixXIlZEduAYX51rX1" type="audio/mpeg"></audio> </td></tr></tbody></table>
 
 <p><b>Iznotia</b>, <b>Iznotiańska Republika Demokratyczna</b> (niem. <i>Iznotia</i>, Isnotische Demokratische Republik).</p>
