--- a/waluty/index.html
+++ b/waluty/index.html
@@ -71,7 +71,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/K0yMhQ5/image-3.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/QPGbrtx/iznotiakwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">IZM</div>
@@ -80,7 +80,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/McPdD8y/image-2.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/xmZkSkz/ebengradkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">REB</div>
@@ -190,7 +190,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/K0yMhQ5/image-3.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/QPGbrtx/iznotiakwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">IZM</div>
@@ -199,7 +199,7 @@
                             </div>
                             <div class="currency-item">
                                 <div class="currency-logo-container">
-                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/McPdD8y/image-2.png');"></div>
+                                    <div class="currency-logo" style="background-image: url('https://i.ibb.co/xmZkSkz/ebengradkwadrat.png');"></div>
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">REB</div>
