--- a/waluty/index.html
+++ b/waluty/index.html
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">PCZ</div>
-                                    <div class="currency-description">Złoty Pieczarski</div>
+                                    <div class="currency-description">Złoty Peczerski</div>
                                 </div>
                             </div>
                             <div class="currency-item">
@@ -212,7 +212,7 @@
                                 </div>
                                 <div class="currency-data">
                                     <div class="currency-name">PCZ</div>
-                                    <div class="currency-description">Złoty Pieczarski</div>
+                                    <div class="currency-description">Złoty Peczerski</div>
                                 </div>
                             </div>
                             <div class="currency-item">
