--- a/wiki/montecydyjski_ład/index.html
+++ b/wiki/montecydyjski_ład/index.html
@@ -34,7 +34,7 @@
 <p><b>Rządowy Fundusz Montecydyjski Ład: Program Inwestycji Strategicznych</b> – centralny fundusz celowy ustanowiony w celu zapobiegania, przeciwdziałania i zwalczania kryzysu gospodarczego w 2018 oraz wywołanych nim sytuacji gospodarczych.</p>
 
 <h1>Powołanie Funduszu</h1>
-<p>Na podstawie uchwały <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa/">Rady Związkowej</a> z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powołanie Funduszu i środki finansowe pozostają w związku z ustawą z 2018 r. o zmianie ustawy o szczególnych rozwiązaniach związanych z zapobieganiem, przeciwdziałaniem i zwalczaniem kryzysu gospodarczego, innych problemów gospodarczych oraz wywołanych nimi sytuacji kryzysowych oraz niektórych innych ustaw. Ustanowiony Fundusz określano mianem Programu.</p>
+<p>Na podstawie uchwały <a href="https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/">Rady Związkowej</a> z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powołanie Funduszu i środki finansowe pozostają w związku z ustawą z 2018 r. o zmianie ustawy o szczególnych rozwiązaniach związanych z zapobieganiem, przeciwdziałaniem i zwalczaniem kryzysu gospodarczego, innych problemów gospodarczych oraz wywołanych nimi sytuacji kryzysowych oraz niektórych innych ustaw. Ustanowiony Fundusz określano mianem Programu.</p>
 
 <h1>Program rozdziału i przekazywania środków</h1>
 <p>Program określa zasady rozdziału i przekazywania:</p>
@@ -63,7 +63,8 @@
 <li>poprawa efektywności energetycznej budynków i instalacji publicznych, – innowacyjne * rozwiązania w elektroenergetyce,</li>
 <li>rewitalizacja obszarów miejskich,</li>
 <li>budowa lub modernizacja infrastruktury kulturalnej i turystycznej,</li>
-<li>budowa lub modernizacja infrastruktury sportowej.</li></ul><h2>Priorytet 3</h2>
+<li>budowa lub modernizacja infrastruktury sportowej.</li></ul>
+<h2>Priorytet 3</h2>
 <ul><li>budowa lub modernizacja infrastruktury technicznej drogowej,</li>
 <li>budowa lub modernizacja infrastruktury tramwajowej, w tym zajezdni,</li>
 <li>budowa lub modernizacja infrastruktury kolejowej, w tym stacji utrzymaniowo-naprawczej,</li>
@@ -76,7 +77,8 @@
 <li>budowa lub modernizacja indywidualnych źródeł ciepła niskoemisyjnego,</li>
 <li>budowa i modernizacja infrastruktury społecznej,</li>
 <li>budowa lub modernizacja infrastruktury edukacyjnej,</li>
-<li>rewitalizacja obszarów i/lub budynków zdegradowanych i/lub poprzemysłowych.</li></ul><h2>Priorytet 4</h2>
+<li>rewitalizacja obszarów i/lub budynków zdegradowanych i/lub poprzemysłowych.</li></ul>
+<h2>Priorytet 4</h2>
 <ul><li>tabor zbiorowego transportu drogowego,</li>
 <li>tabor zbiorowego transportu wodnego,</li>
 <li>budowa lub modernizacja infrastruktury telekomunikacyjnej,</li>
@@ -105,7 +107,7 @@
 
 = Powołanie Funduszu =
 
-Na podstawie uchwały (https://grumqy.github.io/fangea/wiki/rada_związkowa/)[Rady Związkowej] z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powołanie Funduszu i środki finansowe pozostają w związku z ustawą z 2018 r. o zmianie ustawy o szczególnych rozwiązaniach związanych z zapobieganiem, przeciwdziałaniem i zwalczaniem kryzysu gospodarczego, innych problemów gospodarczych oraz wywołanych nimi sytuacji kryzysowych oraz niektórych innych ustaw. Ustanowiony Fundusz określano mianem Programu.
+Na podstawie uchwały (https://grumqy.github.io/fangea/wiki/rada_związkowa_montecydii/)[Rady Związkowej] z 2019 r. w sprawie ustanowienia Rządowego Funduszu Montecydyjski Ład: Programu Inwestycji Strategicznych ustanowiono Fundusz. Powołanie Funduszu i środki finansowe pozostają w związku z ustawą z 2018 r. o zmianie ustawy o szczególnych rozwiązaniach związanych z zapobieganiem, przeciwdziałaniem i zwalczaniem kryzysu gospodarczego, innych problemów gospodarczych oraz wywołanych nimi sytuacji kryzysowych oraz niektórych innych ustaw. Ustanowiony Fundusz określano mianem Programu.
 
 = Program rozdziału i przekazywania środków =
 
@@ -117,9 +119,11 @@ Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano d
 Dofinansowanie z programu przeznacza się na pokrycie wydatków związanych z realizacją zadań inwestycyjnych w ramach obszarów pogrupowanych od najbardziej do najmniej priorytetowych zgodnie z ustawą.
 
 = Priorytety Funduszu =
+
 Program obejmuje następujące obszary priorytetowe:
 
-== Priorytet 1 ==	
+== Priorytet 1 ==
+
 * budowa lub modernizacja infrastruktury drogowej,
 * budowa lub modernizacja infrastruktury wodno-kanalizacyjnej, w tym oczyszczalni,
 * budowa lub modernizacja źródeł ciepła sieciowego zeroemisyjnego,
@@ -129,6 +133,7 @@ Program obejmuje następujące obszary priorytetowe:
 * odnawialne źródła energii.
 
 == Priorytet 2 ==
+
 * tabor z napędem zeroemisyjnym,
 * budowa lub modernizacja źródeł ciepła sieciowego niskoemisyjnego
 * budowa lub modernizacja sieci ciepłowniczej,
@@ -138,7 +143,9 @@ Program obejmuje następujące obszary priorytetowe:
 * rewitalizacja obszarów miejskich,
 * budowa lub modernizacja infrastruktury kulturalnej i turystycznej,
 * budowa lub modernizacja infrastruktury sportowej.
-== Priorytet 3 ==	
+
+== Priorytet 3 ==
+
 * budowa lub modernizacja infrastruktury technicznej drogowej,
 * budowa lub modernizacja infrastruktury tramwajowej, w tym zajezdni,
 * budowa lub modernizacja infrastruktury kolejowej, w tym stacji utrzymaniowo-naprawczej,
@@ -152,7 +159,9 @@ Program obejmuje następujące obszary priorytetowe:
 * budowa i modernizacja infrastruktury społecznej,
 * budowa lub modernizacja infrastruktury edukacyjnej,
 * rewitalizacja obszarów i/lub budynków zdegradowanych i/lub poprzemysłowych.
+
 == Priorytet 4 ==
+
 * tabor zbiorowego transportu drogowego,
 * tabor zbiorowego transportu wodnego,
 * budowa lub modernizacja infrastruktury telekomunikacyjnej,
