--- a/wiki/montecydyjski_ład/index.html
+++ b/wiki/montecydyjski_ład/index.html
@@ -40,7 +40,9 @@
 <p>Program określa zasady rozdziału i przekazywania:</p>
 
 <ul><li>jednostkom samorządu terytorialnego,</li>
-<li>związkom jednostek samorządu terytorialnego – dofinansowania na realizację zadań inwestycyjnych, mających na celu przeciwdziałanie kryzysowi gospodarczemu.</li></ul>Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do <a href="https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/">Prezesa Rady Związkowej</a> za pośrednictwem <a href="https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/">Banku Gospodarstwa Krajowego.</a>
+<li>związkom jednostek samorządu terytorialnego – dofinansowania na realizację zadań inwestycyjnych, mających na celu przeciwdziałanie kryzysowi gospodarczemu.</li></ul>
+<p>Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do <a href="https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/">Prezesa Rady Związkowej</a> za pośrednictwem <a href="https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/">Banku Gospodarstwa Krajowego.</a></p>
+
 <p>Dofinansowanie z programu przeznacza się na pokrycie wydatków związanych z realizacją zadań inwestycyjnych w ramach obszarów pogrupowanych od najbardziej do najmniej priorytetowych zgodnie z ustawą.</p>
 
 <h1>Priorytety Funduszu</h1>
@@ -115,7 +117,9 @@ Program określa zasady rozdziału i przekazywania:
 
 * jednostkom samorządu terytorialnego,
 * związkom jednostek samorządu terytorialnego – dofinansowania na realizację zadań inwestycyjnych, mających na celu przeciwdziałanie kryzysowi gospodarczemu.
+
 Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do (https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/)[Prezesa Rady Związkowej] za pośrednictwem (https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/)[Banku Gospodarstwa Krajowego.]
+
 Dofinansowanie z programu przeznacza się na pokrycie wydatków związanych z realizacją zadań inwestycyjnych w ramach obszarów pogrupowanych od najbardziej do najmniej priorytetowych zgodnie z ustawą.
 
 = Priorytety Funduszu =
