--- a/wiki/montecydyjski_ład/index.html
+++ b/wiki/montecydyjski_ład/index.html
@@ -41,7 +41,7 @@
 
 <ul><li>jednostkom samorządu terytorialnego,</li>
 <li>związkom jednostek samorządu terytorialnego – dofinansowania na realizację zadań inwestycyjnych, mających na celu przeciwdziałanie kryzysowi gospodarczemu.</li></ul>
-<p>Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do <a href="https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/">Prezesa Rady Związkowej</a> za pośrednictwem <a href="https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/">Banku Gospodarstwa Krajowego.</a></p>
+<p>Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do <a href="https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/">Prezesa Rady Związkowej</a> za pośrednictwem <a href="https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/">Banku Gospodarstwa Krajowego</a>.</p>
 
 <p>Dofinansowanie z programu przeznacza się na pokrycie wydatków związanych z realizacją zadań inwestycyjnych w ramach obszarów pogrupowanych od najbardziej do najmniej priorytetowych zgodnie z ustawą.</p>
 
@@ -93,7 +93,8 @@
 <ul><li>5% wartości zadania inwestycyjnego dla wniosków z priorytetu 1,</li>
 <li>10% wartości zadania inwestycyjnego dla wniosków z priorytetu 2,</li>
 <li>15% wartości zadania inwestycyjnego dla wniosków z priorytetu 3.</li>
-<li>20% wartości zadania inwestycyjnego dla wniosków z priorytetu 4.</li></ul>Dofinansowanie wypłacane jest na podstawie promes, po zakończeniu realizacji zadania inwestycyjnego lub jego wydzielonego etapu.
+<li>20% wartości zadania inwestycyjnego dla wniosków z priorytetu 4.</li></ul>
+<p>Dofinansowanie wypłacane jest na podstawie promes, po zakończeniu realizacji zadania inwestycyjnego lub jego wydzielonego etapu.</p>
 
 <p>Dofinansowanie może być przyznane wyłącznie na inwestycje, dla których na dzień złożenia wniosku o dofinansowanie nie ogłoszono postępowań mających na celu wyłonienie wykonawcy lub wykonawców.</p>
  <div id="source-code" style="display:none;">{|infobox Monteverische Ordnung
@@ -118,7 +119,7 @@ Program określa zasady rozdziału i przekazywania:
 * jednostkom samorządu terytorialnego,
 * związkom jednostek samorządu terytorialnego – dofinansowania na realizację zadań inwestycyjnych, mających na celu przeciwdziałanie kryzysowi gospodarczemu.
 
-Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do (https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/)[Prezesa Rady Związkowej] za pośrednictwem (https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/)[Banku Gospodarstwa Krajowego.]
+Dofinansowanie z programu udzielane jest na wniosek podmiotu, który składano do (https://grumqy.github.io/fangea/wiki/prezes_rady_związkowej_montecydii/)[Prezesa Rady Związkowej] za pośrednictwem (https://grumqy.github.io/fangea/wiki/bank_gospodarstwa_krajowego_montecydii/)[Banku Gospodarstwa Krajowego].
 
 Dofinansowanie z programu przeznacza się na pokrycie wydatków związanych z realizacją zadań inwestycyjnych w ramach obszarów pogrupowanych od najbardziej do najmniej priorytetowych zgodnie z ustawą.
 
@@ -181,6 +182,7 @@ Dofinansowanie może być przyznane jedynie w przypadku posiadania przez wniosko
 * 10% wartości zadania inwestycyjnego dla wniosków z priorytetu 2,
 * 15% wartości zadania inwestycyjnego dla wniosków z priorytetu 3.
 * 20% wartości zadania inwestycyjnego dla wniosków z priorytetu 4.
+
 Dofinansowanie wypłacane jest na podstawie promes, po zakończeniu realizacji zadania inwestycyjnego lub jego wydzielonego etapu.
 
 Dofinansowanie może być przyznane wyłącznie na inwestycje, dla których na dzień złożenia wniosku o dofinansowanie nie ogłoszono postępowań mających na celu wyłonienie wykonawcy lub wykonawców.</div>
