--- a/wiki/hierarchia_dróg/index.html
+++ b/wiki/hierarchia_dróg/index.html
@@ -3,9 +3,9 @@
 <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Monteverische Ordnung (Montecydyjski Ład) - Fangea i inne kontynenty</title>
-<meta property="og:title" content="Monteverische Ordnung (Montecydyjski Ład)">
-<meta name="twitter:title" content="Monteverische Ordnung (Montecydyjski Ład)">
+<title>Hierarchia dróg - Fangea i inne kontynenty</title>
+<meta property="og:title" content="Hierarchia dróg">
+<meta name="twitter:title" content="Hierarchia dróg">
 <meta name="description" content="Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Osobny Artykuł: Road hierarchy Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne.">
 <meta property="og:description" content="Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Osobny Artykuł: Road hierarchy Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne.">
 <meta name="twitter:description" content="Hierarchia dróg klasyfikuje drogi według ich funkcji i przepustowości. Podstawowa hierarchia składa się z autostrad, dróg głównych i dróg drugorzędnych. Osobny Artykuł: Road hierarchy Większość krajów funkcjonuje w ramach systemu prawnego opartego na traktatach międzynarodowych, które definiują na poziomie międzynarodowym trzy główne kategorie dróg: autostrady, drogi główne oraz drogi drugorzędne.">
@@ -28,7 +28,7 @@
 <ul></ul>
 </nav>
 <article>
-<header><div>Monteverische Ordnung (Montecydyjski Ład)</div><span>12.10.2024</span></header>
+<header><div>Hierarchia dróg</div><span>12.10.2024</span></header>
 
 <figure class="right"><img src="https://i.ibb.co/WFxxLx6/obraz-2024-10-11-123221903.png" alt="Jedna z dróg stanowych (State route) w Port Wilhelm w stanie Blackwater (USF)"><figcaption>Jedna z dróg stanowych (State route) w Port Wilhelm w stanie Blackwater (USF)</figcaption></figure>
 
